--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
    </header>
 
    <nav id="link"><a href="https://github.com/Nana90-byte">Github</nav>
-
     <br>
- <aside>
-    <h1>titulo</h1> 
-    otgrtgtgtlkglklklklklklklklklklklklklkl
-     klklklklklklklklklklkkl;;k;k;lk;lk;lklk;k
-     ;lk;kl;kcfklqfk'f'gr;;legrk';lgrkkrkrkvvvvvkmkmkmkmkmkmkmkmkmkmninim;mfprlkvirirmrfoffmfjfififkfkfkfififkfmfkfoffkfkfkifofkfri
-     <aside>
- <Section>
-     <h1>mondongo</h1>
 
-     <article>
-         <h1>michi</h1>
-         <p>
+    <aside class="izquierda">
+            <h1 class="izquierda">aside</h1> 
+        
+            <p id="prueba">
+            otgrtgtgtlkglklklklklklklklklklklklklkl
+             klklklklklklklklklklkkl;;k;k;lk;lk;lklk;k
+             ;lk;kl;kcfklqfk'f'gr;;legrk';lgrkk
+             </p>
+    </aside>
+
+   <br>
+ <Section class="derecha">
+     <h1 class="derecha">section</h1>
+
+     <article class="derecha">
+         <h1 id="article">article</h1>
+         <h1 class="derecha">h1,h2,h3</h1>
+         <p class="derecha">
              kjhdk;hkyuhjhlkhlhjliufliehkih;asiy;dsaifylseaihlkhdfiufe
              dlfilidufl'ihfledjhlihfgaege
              dsgakhglkglgugjkhkajhfk.jhf;kufh
@@ -34,6 +40,10 @@
      </article>
 
  </Section>
+ 
+ <footer>
+     <h1>footer</h1>
+ </footer>
  
 
  </article>
