--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
 
@@ -15,37 +16,37 @@
    <nav id="link"><a href="https://github.com/Nana90-byte">Github</nav>
     <br>
 
-    <aside class="izquierda">
-            <h1 class="izquierda">aside</h1> 
+<aside class="derecha">
+            <h1 class="derecha">aside</h1> 
         
             <p id="prueba">
             otgrtgtgtlkglklklklklklklklklklklklklkl
              klklklklklklklklklklkkl;;k;k;lk;lk;lklk;k
              ;lk;kl;kcfklqfk'f'gr;;legrk';lgrkk
              </p>
-    </aside>
+</aside>
 
    <br>
- <Section class="derecha">
-     <h1 class="derecha">section</h1>
 
-     <article class="derecha">
-         <h1 id="article">article</h1>
-         <h1 class="derecha">h1,h2,h3</h1>
-         <p class="derecha">
+<Section class="izquierda">
+     <h1>section</h1>
+
+    <article class="izquierda">
+         <h1 id="none">article</h1>
+         <h1>h1,h2,h3</h1>
+         <p class="izquierda">
              kjhdk;hkyuhjhlkhlhjliufliehkih;asiy;dsaifylseaihlkhdfiufe
              dlfilidufl'ihfledjhlihfgaege
              dsgakhglkglgugjkhkajhfk.jhf;kufh
          </p>
-     </article>
+    </article>
 
- </Section>
+</Section>
  
- <footer>
+<footer>
      <h1>footer</h1>
- </footer>
+</footer>
  
 
- </article>
 </body>
 </html>
